--- a/xiao/wechat/pom.xml
+++ b/xiao/wechat/pom.xml
@@ -17,6 +17,11 @@
   		<artifactId>common</artifactId>
   		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
+  	<dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-web</artifactId>
+        <version>1.4.3.RELEASE</version>
+    </dependency>
   </dependencies>
   
 </project>
