--- a/xiao/pom.xml
+++ b/xiao/pom.xml
@@ -27,5 +27,6 @@
     <module>wechat</module>
     <module>common</module>
     <module>excelUtil</module>
+    <module>Learning</module>
   </modules>
 </project>
